--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>minigames</title>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Kelly+Slab">
   </head>
   <body>
     <div id="app"></div>
